--- a/start/package.json
+++ b/start/package.json
@@ -15,8 +15,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-rating": "^2.0.5",
-    "react-router-dom": "^6.20.1",
-    "sweetalert2": "^11.9.0"
+    "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
