--- a/start/package.json
+++ b/start/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "goobooks-client",
+  "name": "review-react",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,12 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-oauth/google": "^0.11.1",
     "axios": "^1.6.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-rating": "^2.0.5",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.26.1",
+    "toastify-js": "^1.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
